# yolopunk

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml
docs/: .gitignore  .pages  BENTO-GRID-HARMONIZATION.md  DEVELOPMENT.md  OVERFLOW-FIX.md  README.md  TROUBLESHOOTING.md  index.md
docs/api/: overview.md
docs/api/contrib/neojudson/: classification.md  index.md
docs/custom_theme/: home.html  main.html
docs/custom_theme/partials/: bento-grid.html  footer.html  header.html
docs/exemplos/: componentes.md  customizacao-jinja2.md  quickstart.md
docs/grimorio/: sinopse.md  treino.md  validacao.md
docs/javascripts/: yolopunk.js
docs/mkdocs/: grimorio_modo_treino.md  grimorio_modo_val.md  grimorio_sinopse.md  grimório_1.md
docs/overrides/: home.html  main.html
docs/stylesheets/: bento-grid.css  content-pages.css  custom.css  yolopunk-base.css  yolopunk.css
examples/: README.md  quickstart.py
tests/: test_core.py  test_utils.py  test_with_pytest.py  test_with_unittest.py
yolopunk/: README.md  __init__.py  core.py  utils.py
yolopunk/contrib/: CODING_STANDARDS.md  README.md  __init__.py
yolopunk/contrib/neojudson/: __init__.py  callback.py  classification.py
