# YOLOPunk 🔥 AGPL-3.0 License

# Overview:
# This pyproject.toml manages the build, packaging, and distribution of YOLOPunk.
# A modular framework for computer vision experiments with YOLO.

# Key Sections:
# - [build-system]: Build requirements and backend (setuptools, wheel)
# - [project]: Metadata, dependencies, and package information
# - [project.optional-dependencies]: Additional packages for extended features
# - [tool.*]: Configuration for development tools (pytest, ruff, etc.)

# Installation:
# Development mode (recommended): pip install -e .
# With dev dependencies: pip install -e ".[dev]"
# From GitHub: pip install git+https://github.com/Crise-Ergodica/yolopunk.git

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Project settings ------------------------------------------------------------
[project]
name = "yolopunk"
version = "0.1.0"
description = "Framework modular para visão computacional com YOLO - Projeto Ergódico"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = [
    "computer-vision",
    "yolo",
    "object-detection",
    "deep-learning",
    "pytorch",
    "yolopunk"
]
authors = [
    { name = "Aurora Drumond Costa Magalhães", email = "gdcm10@gmail.com" }
]

# Required dependencies -------------------------------------------------------
dependencies = [
    "numpy>=1.23.0",
]

# Optional dependencies -------------------------------------------------------
[project.optional-dependencies]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

# Full installation with all YOLO dependencies (quando necessário)
yolo = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
]

# All optional dependencies
all = [
    "yolopunk[dev]",
    "yolopunk[yolo]",
]

[project.urls]
"Homepage" = "https://github.com/Crise-Ergodica/yolopunk"
"Bug Tracker" = "https://github.com/Crise-Ergodica/yolopunk/issues"
"Documentation" = "https://github.com/Crise-Ergodica/yolopunk/tree/main/docs"
"Source Code" = "https://github.com/Crise-Ergodica/yolopunk"

# Scripts CLI (adicionar quando tiver implementações prontas)
# [project.scripts]
# yolopunk = "yolopunk.cli:main"
# yolopunk-detect = "yolopunk.detection:cli"
# yolopunk-train = "yolopunk.training:cli"

# Tools settings -------------------------------------------------------------------------------------------------------
[tool.setuptools]
packages = { find = { where = ["."], include = ["yolopunk", "yolopunk.*"] } }
package-data = { "yolopunk" = ["*.yaml", "*.yml", "*.json"] }

[tool.setuptools.dynamic]
version = { attr = "yolopunk.__version__" }

[tool.pytest.ini_options]
addopts = "--doctest-modules --durations=30 --color=yes --cov=yolopunk --cov-report=html"
norecursedirs = [".git", "dist", "build", "__pycache__", "*.egg-info"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["yolopunk"]

[tool.codespell]
ignore-words-list = "crate,nd,strack,dota,ane,segway,fo,gool,winn,commend,yolo,hist"
skip = "*.csv,*venv*,docs/??/,docs/mkdocs_??.yml,.git,*.pyc,*.class,*.ipynb"

[tool.coverage.run]
source = ["yolopunk"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]